mid-day commit 07/09
